key person added

--- a/api/v1/.htaccess
+++ b/api/v1/.htaccess
@@ -7,4 +7,5 @@ RewriteRule ^review/?$ review.php [NC,L]
 RewriteRule ^certificate/?$ certificate.php [NC,L]
 RewriteRule ^blog/?$ blog.php [NC,L]
 RewriteRule ^faq/?$ faq.php [NC,L]
+RewriteRule ^diamondfaq/?$ diamondfaq.php [NC,L]
 RewriteRule ^keyperson/?$ keyperson.php [NC,L]
