--- a/api/v1/.htaccess
+++ b/api/v1/.htaccess
@@ -1,6 +1,7 @@
 RewriteEngine On # Turn on the rewriting engine
-RewriteRule ^product/?$ mainproduct.php [NC,L]
-RewriteRule ^product/([A-Za-z0-9-]+)/?$ mainproduct.php?mainproductid=$1 [NC,L]
+RewriteRule ^product/?$ product.php [NC,L]
+RewriteRule ^mainproduct/?$ mainproduct.php [NC,L]
+RewriteRule ^mainproduct/([A-Za-z0-9-]+)/?$ mainproduct.php?mainproductid=$1 [NC,L]
 RewriteRule ^admin/?$ admin.php [NC,L]
 RewriteRule ^aboutdetails/?$ aboutdetails.php [NC,L]
 RewriteRule ^review/?$ review.php [NC,L]
