--- a/api/v1/.htaccess
+++ b/api/v1/.htaccess
@@ -1,8 +1,13 @@
 RewriteEngine On # Turn on the rewriting engine
-RewriteRule ^product/?$ product.php [NC,L]
 RewriteRule ^mainproduct/?$ mainproduct.php [NC,L]
 RewriteRule ^mainproduct/([A-Za-z0-9-]+)/?$ mainproduct.php?mainproductid=$1 [NC,L]
+RewriteRule ^subproduct/?$ subproduct.php [NC,L]
+RewriteRule ^productitem/?$ productitem.php [NC,L]
+RewriteRule ^productimage/?$ productimage.php [NC,L]
+RewriteRule ^productlink/?$ productlink.php [NC,L]
 RewriteRule ^admin/?$ admin.php [NC,L]
+RewriteRule ^diamondsubproduct/?$ diamondsubproduct.php [NC,L]
+RewriteRule ^diamonditem/?$ diamonditem.php [NC,L]
 RewriteRule ^aboutdetails/?$ aboutdetails.php [NC,L]
 RewriteRule ^review/?$ review.php [NC,L]
 RewriteRule ^certificate/?$ certificate.php [NC,L]
